k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: game-2048
  labels:
    app.kubernetes.io/part-of: game-2048
    monitoring: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    app.kubernetes.io/part-of: game-2048
    purpose: observability
